# prima

./: Cargo.toml  README.md
shaders/: compile.bat  tri.frag.glsl  tri.frag.spv  tri.vert.glsl  tri.vert.spv
src/: main.rs
